--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "gulp": "~3.5.2",
-    "gulp-util": "~2.2.14"
+    "gulp-util": "~2.2.14",
+    "gulp-jshint": "~1.4.0",
+    "jshint-stylish": "~0.1.5"
   }
 }
