--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "gulp": "~3.5.2",
     "gulp-util": "~2.2.14",
     "gulp-jshint": "~1.4.0",
-    "jshint-stylish": "~0.1.5"
+    "jshint-stylish": "~0.1.5",
+    "gulp-jasmine": "~0.1.3"
   }
 }
