--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "gulp-util": "~2.2.14",
     "gulp-jshint": "~1.4.0",
     "jshint-stylish": "~0.1.5",
-    "gulp-jasmine": "~0.1.3"
+    "gulp-jasmine": "~0.1.3",
+    "gulp-uglify": "~0.2.1",
+    "gulp-rename": "~1.0.0"
   }
 }
