--- a/package.json
+++ b/package.json
@@ -7,5 +7,22 @@
     "gulp-jasmine": "~0.1.3",
     "gulp-uglify": "~0.2.1",
     "gulp-rename": "~1.0.0"
-  }
+  },
+  "name": "lambada",
+  "description": "Lambada is just the string lambda part of [Functional Javascript](https://github.com/osteele/functional-javascript).",
+  "version": "0.0.0",
+  "main": "lambada.js",
+  "scripts": {
+    "test": "gulp test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rbonvall/lambada.git"
+  },
+  "author": "Roberto Bonvallet <rbonvall@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rbonvall/lambada/issues"
+  },
+  "homepage": "https://github.com/rbonvall/lambada"
 }
