--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "lambada.js",
   "scripts": {
     "test": "node_modules/gulp-jasmine/node_modules/minijasminenode/bin/minijn test.js",
-    "lint": "node_modules/gulp-jshint/node_modules/jshint/bin/jshint -c jshintrc.json *.js"
+    "lint": "node_modules/gulp-jshint/node_modules/jshint/bin/jshint *.js"
   },
   "repository": {
     "type": "git",
